dft_256/vitis_hls.log
INFO: [HLS 200-10] Running 'D:/Xilinx/Vitis_HLS/2022.1/bin/unwrapped/win64.o/vitis_hls.exe'
INFO: [HLS 200-10] For user 'briantseng' on host 'desktop-dr3i53c' (Windows NT_amd64 version 6.2) on Fri Oct 21 19:51:45 +0800 2022
INFO: [HLS 200-10] In directory 'D:/1111HLS/LabB/dft_256'
Sourcing Tcl script 'D:/1111HLS/LabB/dft_256/dft_v3/solution1/csim.tcl'
INFO: [HLS 200-1510] Running: source D:/1111HLS/LabB/dft_256/dft_v3/solution1/csim.tcl
INFO: [HLS 200-1510] Running: open_project dft_v3 
INFO: [HLS 200-10] Opening project 'D:/1111HLS/LabB/dft_256/dft_v3'.
INFO: [HLS 200-1510] Running: set_top dft 
INFO: [HLS 200-1510] Running: add_files dft_v3/coefficients256.h 
INFO: [HLS 200-10] Adding design file 'dft_v3/coefficients256.h' to the project
INFO: [HLS 200-1510] Running: add_files dft_v3/dft.cpp 
INFO: [HLS 200-10] Adding design file 'dft_v3/dft.cpp' to the project
INFO: [HLS 200-1510] Running: add_files dft_v3/dft.h 
INFO: [HLS 200-10] Adding design file 'dft_v3/dft.h' to the project
INFO: [HLS 200-1510] Running: add_files -tb dft_v3/dft_test.cpp 
INFO: [HLS 200-10] Adding test bench file 'dft_v3/dft_test.cpp' to the project
INFO: [HLS 200-1510] Running: add_files -tb dft_v3/out.gold.dat 
INFO: [HLS 200-10] Adding test bench file 'dft_v3/out.gold.dat' to the project
INFO: [HLS 200-1510] Running: open_solution solution1 -flow_target vivado 
INFO: [HLS 200-10] Opening solution 'D:/1111HLS/LabB/dft_256/dft_v3/solution1'.
INFO: [SYN 201-201] Setting up clock 'default' with a period of 10ns.
INFO: [HLS 200-1611] Setting target device to 'xc7z020-clg484-1'
INFO: [HLS 200-1505] Using flow_target 'vivado'
Resolution: For help on HLS 200-1505 see www.xilinx.com/cgi-bin/docs/rdoc?v=2022.1;t=hls+guidance;d=200-1505.html
INFO: [HLS 200-1510] Running: set_part xc7z020clg484-1 
INFO: [HLS 200-1510] Running: create_clock -period 10 -name default 
INFO: [HLS 200-1510] Running: csim_design -quiet 
INFO: [SIM 211-2] *************** CSIM start ***************
INFO: [SIM 211-4] CSIM will launch GCC as the compiler.
   Compiling ../../../dft_test.cpp in debug mode
csim.mk:73: recipe for target 'obj/dft_test.o' failed
In file included from D:/Xilinx/Vitis_HLS/2022.1/include/floating_point_v7_0_bitacc_cmodel.h:144:0,
                 from D:/Xilinx/Vitis_HLS/2022.1/include/hls_fpo.h:189,
                 from D:/Xilinx/Vitis_HLS/2022.1/include/hls_half_fpo.h:64,
                 from D:/Xilinx/Vitis_HLS/2022.1/include/hls_half.h:71,
                 from D:/Xilinx/Vitis_HLS/2022.1/include/etc/ap_private.h:98,
                 from D:/Xilinx/Vitis_HLS/2022.1/include/ap_common.h:710,
                 from D:/Xilinx/Vitis_HLS/2022.1/include/ap_int.h:56,
                 from ../../../dft.h:1,
                 from ../../../dft_test.cpp:14:
D:/Xilinx/Vitis_HLS/2022.1/include/gmp.h:63:0: warning: "__GMP_LIBGMP_DLL" redefined
 #define __GMP_LIBGMP_DLL  0
 
In file included from D:/Xilinx/Vitis_HLS/2022.1/include/hls_fpo.h:189:0,
                 from D:/Xilinx/Vitis_HLS/2022.1/include/hls_half_fpo.h:64,
                 from D:/Xilinx/Vitis_HLS/2022.1/include/hls_half.h:71,
                 from D:/Xilinx/Vitis_HLS/2022.1/include/etc/ap_private.h:98,
                 from D:/Xilinx/Vitis_HLS/2022.1/include/ap_common.h:710,
                 from D:/Xilinx/Vitis_HLS/2022.1/include/ap_int.h:56,
                 from ../../../dft.h:1,
                 from ../../../dft_test.cpp:14:
D:/Xilinx/Vitis_HLS/2022.1/include/floating_point_v7_0_bitacc_cmodel.h:136:0: note: this is the location of the previous definition
 #define __GMP_LIBGMP_DLL 1
 
../../../dft_test.cpp: In function 'int main()':
../../../dft_test.cpp:49:13: error: no match for 'operator=' (operand types are 'DTYPE' and 'int')
   In_R[i] = i;
             ^
In file included from ../../../dft_test.cpp:14:0:
../../../dft.h:3:8: note: candidate: DTYPE& DTYPE::operator=(const DTYPE&)
 struct DTYPE
        ^~~~~
../../../dft.h:3:8: note:   no known conversion for argument 1 from 'int' to 'const DTYPE&'
../../../dft.h:3:8: note: candidate: DTYPE& DTYPE::operator=(DTYPE&&)
../../../dft.h:3:8: note:   no known conversion for argument 1 from 'int' to 'DTYPE&&'
../../../dft_test.cpp:50:13: error: no match for 'operator=' (operand types are 'DTYPE' and 'double')
   In_I[i] = 0.0;
             ^~~
In file included from ../../../dft_test.cpp:14:0:
../../../dft.h:3:8: note: candidate: DTYPE& DTYPE::operator=(const DTYPE&)
 struct DTYPE
        ^~~~~
../../../dft.h:3:8: note:   no known conversion for argument 1 from 'double' to 'const DTYPE&'
../../../dft.h:3:8: note: candidate: DTYPE& DTYPE::operator=(DTYPE&&)
../../../dft.h:3:8: note:   no known conversion for argument 1 from 'double' to 'DTYPE&&'
../../../dft_test.cpp:63:34: error: invalid cast from type 'DTYPE' to type 'float'
   rmse_R.add_value((float)Out_R[i] - gold_R);
                                  ^
../../../dft_test.cpp:64:34: error: invalid cast from type 'DTYPE' to type 'float'
   rmse_I.add_value((float)Out_I[i] - gold_I);
                                  ^
make: *** [obj/dft_test.o] Error 1
ERROR: [SIM 211-100] 'csim_design' failed: compilation error(s).
INFO: [SIM 211-3] *************** CSIM finish ***************
INFO: [HLS 200-111] Finished Command csim_design CPU user time: 0 seconds. CPU system time: 0 seconds. Elapsed time: 0.927 seconds; current allocated memory: 0.000 MB.
4
    while executing
"source D:/1111HLS/LabB/dft_256/dft_v3/solution1/csim.tcl"
    invoked from within
"hls::main D:/1111HLS/LabB/dft_256/dft_v3/solution1/csim.tcl"
    ("uplevel" body line 1)
    invoked from within
"uplevel 1 hls::main {*}$newargs"
    (procedure "hls_proc" line 16)
    invoked from within
"hls_proc [info nameofexecutable] $argv"
INFO: [HLS 200-112] Total CPU user time: 3 seconds. Total CPU system time: 1 seconds. Total elapsed time: 3.161 seconds; peak allocated memory: 1.464 GB.
